@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-03-01T00:53:06Z",
-  "count_outdated" : 1939,
-  "uniques_outdated" : 147,
-  "count" : 1942,
-  "uniques" : 149,
+  "timestamp" : "2024-05-18T08:15:00Z",
+  "count_outdated" : 1942,
+  "uniques_outdated" : 149,
+  "count" : 1948,
+  "uniques" : 150,
   "views" : [
     {
-      "timestamp": "2024-02-29T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "timestamp": "2024-05-18T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
+      "count_decinc": [ 0, 6 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
