@@ -1,11 +1,11 @@
 {
-  "count": 3,
-  "uniques": 2,
+  "count": 6,
+  "uniques": 1,
   "views": [
     {
-      "timestamp": "2024-02-29T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "timestamp": "2024-05-18T00:00:00Z",
+      "count": 6,
+      "uniques": 1
     }
   ]
 }
